Updating to come back to on 12/20/2020

--- a/index.html
+++ b/index.html
@@ -3,19 +3,38 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Langar&display=swap" rel="stylesheet">
 </head>
 <body>
-	<main>
+	
 		<header>
 		<h1>What is a Studious Enigma you ask?
 		</h1>
 		
 		</header>
-
-  </main>
-  
+		<main class="grid-container">
+		<h1>A Studious enigma is hard to explain unless you ask them.</h1>
+		<p>Meaning that they are unparalleled in their abilty to 
+		understand and explain things, however they themselves and their behavior
+		is sometimes seemingly without reason or explaination, again, unless they are able to sit you down
+		and have an expalining. You understand...obviously, right?</p>
+		<p>These are the days of our lives. Singing in the rain. Whistle while you work!</p>
+		</main>
+		<article class="wrapper-class">
+		<h1>
+		I am just trying to see some different latouts and need this text></h1>
+		</article>
+		<aside class="container-class">
+		<h1>I am going to do all th research I can on this term and make a rtesearch site
+		for this topic.</h1>
+		<p>I am going to be building this as I go through
+		my learning journey with Python in Treehouse and have committed to
+		the #100Daysofcode challenge. I can't wait to see what this becomes as I 
+		gain more and more knowledge of the wondrerful world of Python.!!</p>
+		</aside>
+		
+		
   </body>
 </html>
